# trading-bot-ma

./: .gitignore  README.md  config.py  logger_module.py  main.py  pyproject.toml  requirements.txt  server.py  trading_bot.py
bk_main_delete/: binance_service.py  config.py  notification_service.py  pyproject.toml  runner.py  server.py  trading_bot.py
bk_main_delete/constants/: dev.py
constants/: base.py
templates/: index.html
