[project]
name = "alertas-trading"
version = "0.1.0"
description = "Trading bot for alerts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "eventlet>=0.39.1",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "pygame>=2.6.1",
    "python-binance>=1.0.28",
    "ruff>=0.11.6",
]
